@@ -8,4 +8,5 @@ it = Italian
 kr = Korean
 nl = Dutch
 pt = Portuguese
+dv = Diverse
 
