@@ -8,3 +8,4 @@ it=Italienisch
 kr=Koreanisch
 nl=Holl\u00E4ndisch
 pt=Portugiesisch
+dv=Diverse
