@@ -35,3 +35,4 @@ update_resources_tooltip=Update auxilary resource files like help pages, voice f
 update_voice=Update voice files
 update_voice_tooltip=Updates voice files with the latest online version. WARNING! This will replace all custom voice files.
 uptodate=\t{0} is uptodate\n
+update_dir_created=Update directory created...\n
