@@ -35,4 +35,6 @@ update_resources_tooltip=Hilfeseiten, Sprachansagen, Anleitungen und Hilfsprogra
 update_voice=Sprachansagen aktualisieren
 update_voice_tooltip=Aktualisiert die Sprachansagen auf die neueste Onlineversion. Achtung, Lokale \u00C4nderungen werden \u00FCberschrieben!
 uptodate=\t{0} ist aktuell\n
+update_dir_created=Update Verzeichnis angelegt....\n
+
 
